# khoai-SOFA

./: .gitignore  README.md  test.txt
ai-engine/: pyproject.toml
ai-engine/notebooks/: data_exploration.ipynb
mobile-app/: README.md  pubspec.yaml
mobile-app/android/app/: build.gradle.kts
mobile-app/android/app/src/main/: AndroidManifest.xml
mobile-app/android/app/src/main/kotlin/com/example/khoai_sofa_collection/: MainActivity.kt
mobile-app/core/: CMakeLists.txt
mobile-app/core/include/: accelerometer_processor.h
mobile-app/core/src/: accelerometer_processor.cpp
mobile-app/lib/: ffi_bridge.dart  main.dart
mobile-app/test/: widget_test.dart
